[功能]  index增加底色與文字

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,5 +3,11 @@ $body-color: red;
 body {
   color: $body-color;
   font-size: 40px;
-  background-color: yellow;
+  background-color: black;
+}
+
+.desk{
+  background-color: aquamarine;
+  span{color: yellow;}
+
 }
